# PIdisk

./: README.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: FileGrid.jsx  FolderTree.jsx  pidisk-app.code-workspace
src-tauri/: Cargo.toml  package-lock.json  settings.json  tauri.conf.json
src-tauri/src/: main.rs  settings.json
