[package]
name = "tauri_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.86.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Таури-билд и таури-рантайм должны быть одной версии — здесь 2.2.0, т.к. более новых для tauri-build на crates.io нет
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.2.0"
tauri-plugin-log = "2.0.0-rc"
ssh2             = "0.9"
openssl          = { version = "0.10", features = ["vendored"] }
once_cell        = "1.17"
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
log              = "0.4"
dirs             = "6.0"
base64           = "0.21"

